--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -23,4 +23,18 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Constant\" />
+    <Folder Include="Dtos\Classroom\" />
+    <Folder Include="Dtos\Class\" />
+    <Folder Include="Dtos\Student\" />
+    <Folder Include="Dtos\Subject\" />
+    <Folder Include="Dtos\Teacher\" />
+    <Folder Include="Filters\ClassFilter\" />
+    <Folder Include="Filters\ClassroomFilter\" />
+    <Folder Include="Filters\StudentFilter\" />
+    <Folder Include="Filters\SubjectFilter\" />
+    <Folder Include="Filters\TeacherFilter\" />
+  </ItemGroup>
+
 </Project>
