--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -1,11 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
@@ -22,19 +20,7 @@
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="Constant\" />
-    <Folder Include="Dtos\Classroom\" />
-    <Folder Include="Dtos\Class\" />
-    <Folder Include="Dtos\Student\" />
-    <Folder Include="Dtos\Subject\" />
-    <Folder Include="Dtos\Teacher\" />
-    <Folder Include="Filters\ClassFilter\" />
-    <Folder Include="Filters\ClassroomFilter\" />
-    <Folder Include="Filters\StudentFilter\" />
-    <Folder Include="Filters\SubjectFilter\" />
-    <Folder Include="Filters\TeacherFilter\" />
   </ItemGroup>
-
 </Project>
