Fix error with Seeder

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=schooldb;User Id=postgres;Password=postgres;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=schooldb;User Id=postgres;Password=Aylin0202;"
   },
   "Jwt": {
     "Key": "Dar-biyobon-misli-sheru-dar-safar-mardona-bosh,Qimaty-mardi-nadony-misly-zan-dar-khona-bosh!!!",
